fix border on mobile

--- a/src/app/pages/lodging/lodging.component.scss
+++ b/src/app/pages/lodging/lodging.component.scss
@@ -64,3 +64,9 @@
 img {
   width: 50%;
 }
+
+@media only screen and (max-width: 600px) {
+  .b-right {
+    border-right: none;
+  }
+}
